# Versions

./: .gitignore  README.md  com.github.CactiChameleon9.Versions.json  meson.build
data/: com.github.CactiChameleon9.Versions.appdata.xml.in  com.github.CactiChameleon9.Versions.desktop.in  com.github.CactiChameleon9.Versions.gschema.xml  meson.build
data/icons/: meson.build
po/: POTFILES  meson.build
src/: application.vala  main.vala  meson.build  versions.gresource.xml  window.ui  window.vala
